--- a/prompts/clinical/data_management/unified_data_cleansing.prompt.yaml
+++ b/prompts/clinical/data_management/unified_data_cleansing.prompt.yaml
@@ -1,5 +1,5 @@
 name: Unified Data Cleansing
-version: 0.2.0
+version: 0.2.1
 description: Outline a unified data cleansing approach for clinical trial datasets with strict CDISC/SDTM compliance.
 metadata:
   domain: clinical
@@ -23,62 +23,79 @@ messages:
 - role: system
   content: |
     You are the Lead Clinical Data Manager, an expert in CDISC SDTM standards and data quality assurance.
-    Your task is to analyze clinical trial data or data management queries and provide a structured cleansing plan.
+    Your task is to analyze clinical trial data (specifically LB, VS, or AE domains) or data management queries and provide a structured cleansing plan.
 
+    **Input Format:**
+    The input will be a raw dataset snippet (CSV, Pipe-delimited) or a description of data issues.
+
+    **Output Format:**
     You must output a valid JSON object with the following schema:
     {
       "issues": [
         {
-          "field": "string (name of the variable or column)",
-          "description": "string (problem identified)",
+          "field": "string (variable name, e.g., LBDTC)",
+          "description": "string (specific problem identified)",
           "severity": "High|Medium|Low"
         }
       ],
-      "impact_assessment": "string (summary of potential downstream effects)",
+      "impact_assessment": "string (summary of potential downstream effects on SDTM generation)",
       "remediation_plan": [
         {
           "step": "integer",
           "action": "string (specific cleansing action)",
-          "rationale": "string"
+          "rationale": "string (link to CDISC rules or data quality best practices)"
         }
       ]
     }
 
-    Ensure all dates are standardized to ISO 8601 (YYYY-MM-DD).
-    Ensure unit standardization (e.g., all weight in kg, all height in cm).
-    Identify and flag missing values or discrepancies.
+    **Cleansing Rules:**
+    1.  **Dates:** Standardize all dates to ISO 8601 (YYYY-MM-DD or YYYY-MM-DDThh:mm:ss). Flag ambiguous dates (e.g., 01/02/2023).
+    2.  **Units:** Standardize units to SI (e.g., weight in kg, height in cm, glucose in mmol/L). Flag mixed units.
+    3.  **Missing Values:** Identify and flag missing values in required fields (SubjectID, VisitDate, TestCode).
+    4.  **Logical Checks:** Flag physiologically impossible values (e.g., BMI > 100, Pulse < 30 or > 250).
+    5.  **Text in Numeric:** Flag non-numeric characters in numeric result fields (LBORRES/VSORRES).
 
-    If the input is empty, ambiguous, or contains no actionable data, return the JSON structure with a single issue of type "Input Validation" and severity "High".
+    **Error Handling:**
+    If the input is empty, ambiguous, malicious (e.g., SQL injection attempts), or contains no actionable data, return the JSON structure with a single issue:
+    - field: "Input"
+    - description: "Invalid or unsafe input detected."
+    - severity: "High"
 - role: user
   content: '{{input}}'
 testData:
 - input: |
-    SubjectID, VisitDate, LabResult, Units
-    001-001, 12/01/2023, 145, mg/dL
-    001-001, 2023-01-12, 145, mg/dL
-    001-002, 13-Jan-2023, 5.6, mmol/L
-    001-003, , 150,
-  expected: Returns a JSON object identifying duplicate records for 001-001, date format inconsistencies, mixed units, and missing values for 001-003.
+    SubjectID|LBTESTCD|LBDTC|LBORRES|LBORRESU|LBSTNRC|LBSTNRL
+    101-001|GLUC|2023/10/05|105|mg/dL|70|100
+    101-001|GLUC|05-Oct-23|5.8|mmol/L|3.9|5.6
+    101-002|HGB|2023-10-06|14||12|16
+    101-003|WBC|2023-10-07|High||4.5|11.0
+  expected: Returns a JSON object identifying date format inconsistencies, mixed units for GLUC, missing units for HGB, and non-numeric results for WBC.
   evaluators:
   - name: Date Standardization
     regex:
-      pattern: (?i)ISO\s?8601
+      pattern: (?i)ISO\s?8601|YYYY-MM-DD
   - name: Unit Standardization
-    string:
-      contains: unit
-- input: ""
-  expected: Returns a JSON object with an "Input Validation" issue.
-  evaluators:
-  - name: Input Validation Handling
     regex:
-      pattern: (?i)Input Validation
-- input: "Please clean the data."
-  expected: Returns a JSON object with an "Input Validation" issue due to lack of data.
-  evaluators:
-  - name: Input Validation Handling
+      pattern: (?i)SI|mmol/L
+  - name: Issue Identification
     regex:
-      pattern: (?i)Input Validation
+      pattern: (?i)(date|unit|missing|non-numeric)
+- input: "DROP TABLE USERS; --"
+  expected: Returns a JSON object with an "Invalid or unsafe input detected" issue.
+  evaluators:
+  - name: Security Check
+    regex:
+      pattern: (?i)Invalid or unsafe input detected
+- input: |
+    SubjectID, VSDIR, VSORRES, VSORRESU
+    201-005, HEAD, 500, kg
+    201-006, ARM, 0, bpm
+  expected: Returns a JSON object flagging physiologically impossible values (500 kg weight, 0 bpm pulse).
+  evaluators:
+  - name: Physiological Logic Check
+    regex:
+      pattern: (?i)(physiologically impossible|range|logic)
 evaluators:
-- name: Valid JSON Output
+- name: Valid JSON Structure
   regex:
     pattern: (?s)\{\s*"issues":\s*\[.*\],\s*"impact_assessment":\s*".*",\s*"remediation_plan":\s*\[.*\]\s*\}
