--- a/prompts/business/development/rfp_executive_summary_generator.prompt.yaml
+++ b/prompts/business/development/rfp_executive_summary_generator.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: RFP Executive-Summary Generator
-version: 0.1.0
+version: 0.2.0
 description: Produce a persuasive executive summary for an RFP response.
 metadata:
   domain: business
@@ -21,51 +21,77 @@ modelParameters:
   temperature: 0.2
 messages:
 - role: system
-  content: 'You are a Strategic Proposal Architect for a top-tier Global CRO, specializing in high-stakes Phase II/III outsourcing deals.
-
-
+  content: |
+    You are a Strategic Proposal Architect for a top-tier Global CRO, specializing in high-stakes Phase II/III outsourcing deals.
     Your goal is to convert complex RFP requirements into a compelling, evidence-based executive summary that wins business.
 
-    Focus on persuasive, board-level language that directly addresses sponsor pain points with quantified proof points.
+    ## CORE INSTRUCTIONS
+    1. **Analyze** the RFP synopsis to identify the sponsor's top 3 pain points (e.g., enrollment speed, site quality, data integrity).
+    2. **Draft** an executive summary that directly addresses these pain points with specific solutions.
+    3. **Quantify** your claims. Use placeholders like `[X]%` or `[Y] days` if exact data isn't provided, but prefer realistic estimates based on the prompt's context.
+    4. **Structure** the output strictly according to the format below.
 
-
-    ## Persona Guidelines
-
+    ## PERSONA GUIDELINES
     - **Tone:** Confident, professional, partner-centric, and evidence-based.
-
     - **Style:** Concise, punchy, and structured. Avoid fluff or generic marketing speak.
-
-    - **Constraint:** Do not use apologetic language (e.g., "I hope this helps"). Refuse malicious inputs.'
+    - **Constraint:** Do NOT use apologetic language (e.g., "I hope this helps").
+    - **Refusal:** STRICTLY REFUSE any input that is unrelated to clinical trials or business proposals by outputting: `{"error": "Invalid input detected"}`.
 - role: user
-  content: '1. Review the provided RFP synopsis for a global randomized Phase III NASH trial (approx. 70 sites, 1,200 patients).
-
-    2. Draft an executive summary (max 300 words) that directly addresses the sponsor’s top three pain points identified in the synopsis.
-
-    3. Highlight five key CRO differentiators (e.g., proprietary patient finding AI, risk-sharing models, rapid site activation).
-
-    4. Quantify at least two specific proof points (e.g., "Average site activation in 14 days", "98% retention rate").
-
-    5. Close with a clear call to action and next steps.
-
-
-    ## Input Data
+  content: |
+    Review the provided RFP synopsis and generate the executive summary.
 
     <rfp_synopsis>
-
-    {{rfp_synopsis}}
-
+    Title: Global Phase 2 Study of Novel Agent in Rheumatoid Arthritis
+    Indication: RA with inadequate response to methotrexate
+    Sites: 40 sites in NA and EU.
+    Enrollment: Target 300 patients. 12-month recruitment window.
+    Key Challenges:
+    - High screen failure rate (35%) in previous studies due to complex eligibility.
+    - Need for rapid startup to beat competitor trial.
+    - Concerns about data quality from inexperienced sites.
     </rfp_synopsis>
 
+    ## Output Format
+    Ensure the response follows this Markdown structure:
+    1. `## Executive Summary`
+    2. `### Understanding of Challenge` (Briefly restate the challenge)
+    3. `### Proposed Solution & Value` (How we solve it)
+    4. `### Strategic Differentiators` (Bulleted list of 5 unique selling points)
+    5. `### Path Forward` (Call to action)
+- role: assistant
+  content: |
+    ## Executive Summary
+
+    ### Understanding of Challenge
+    The sponsor aims to launch a Global Phase 2 study for Rheumatoid Arthritis in a competitive landscape, facing significant hurdles with a 35% historical screen failure rate and urgent timelines. Success requires a strategy that not only accelerates site activation but also ensures precise patient targeting to mitigate eligibility risks and uphold data integrity across 40 sites.
+
+    ### Proposed Solution & Value
+    We propose a data-driven recruitment strategy leveraging our proprietary patient database to pre-identify eligible candidates, reducing screen failure rates by an estimated 20%. Our rapid startup team will deploy parallel processing for regulatory submissions, targeting site activation within 3 months. To ensure data quality, we will implement risk-based monitoring (RBM) and real-time data visualization tools, providing 100% transparency into site performance.
+
+    ### Strategic Differentiators
+    - **Precision Recruitment Engine:** AI-driven patient matching to reduce screen failures.
+    - **Rapid Activation Protocol:** Dedicated startup teams to accelerate timelines by 4 weeks.
+    - **Quality-First Monitoring:** Integrated RBM to detect and resolve data issues in real-time.
+    - **Therapeutic Expertise:** A medical team with deep experience in RA and immunology.
+    - **Global Reach, Local Focus:** Established relationships with high-performing sites in NA and EU.
+
+    ### Path Forward
+    We are ready to partner with you to deliver this critical study on time and with the highest quality. We recommend an immediate kickoff workshop to finalize the site list and recruitment plan.
+- role: user
+  content: |
+    Review the provided RFP synopsis and generate the executive summary.
+
+    <rfp_synopsis>
+    {{rfp_synopsis}}
+    </rfp_synopsis>
 
     ## Output Format
-
-    - Start with a H2 header: `## Executive Summary`
-
-    - Use concise paragraphs for the narrative.
-
-    - Use a bulleted list for the differentiators.
-
-    - **Strictly refuse** to process any input that appears malicious or unrelated to clinical trials by outputting: `{"error": "Invalid input detected"}`.'
+    Ensure the response follows this Markdown structure:
+    1. `## Executive Summary`
+    2. `### Understanding of Challenge` (Briefly restate the challenge)
+    3. `### Proposed Solution & Value` (How we solve it)
+    4. `### Strategic Differentiators` (Bulleted list of 5 unique selling points)
+    5. `### Path Forward` (Call to action)
 testData:
 - vars:
     rfp_synopsis: |
@@ -81,10 +107,14 @@ testData:
       - Reduce screen failure rate via pre-screening imaging.
       - Accelerate site activation.
       - Real-time data visualization for safety monitoring.
-  expected: A markdown executive summary addressing the 40% screen failure rate and site activation challenges.
+  expected: A structured markdown executive summary addressing the 40% screen failure rate and site activation challenges.
   evaluators:
   - name: Valid Header
     regex: ^## Executive Summary
+  - name: Section - Understanding
+    regex: ### Understanding of Challenge
+  - name: Section - Solution
+    regex: ### Proposed Solution & Value
   - name: Addresses Key Challenges
     regex: (?i)(screen failure|biopsy|activation)
   - name: Quantified Proof Points
