--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,5 +1,4 @@
-name: Deploy Jekyll site
-# Build site from Markdown documentation and prompts
+name: Deploy MkDocs to GitHub Pages
 
 on:
   push:
@@ -16,41 +15,50 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-          cache: 'pip'
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-      - name: Validate prompts
-        run: python3 tools/scripts/validate_prompt_schema.py
-      - name: Generate Search Index
-        run: python3 tools/scripts/generate_search_index.py
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./
-          destination: ./_site
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-
-  deploy:
+  build-and-deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Ensure source files are available in docs/ for linking
+      - name: Prepare Docs Structure
+        run: |
+          mkdir -p docs/prompts
+          mkdir -p docs/workflows_src
+          cp -r prompts/* docs/prompts/
+          cp -r workflows/* docs/workflows_src/
+
+      # If your documentation generation scripts need to run before building the docs,
+      # uncomment and adjust the line below:
+      # - name: Generate Docs
+      #   run: python tools/scripts/generate_docs.py
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
+      - name: Build MkDocs
+        run: mkdocs build --clean --strict
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./site
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
